fixed overflowing text

--- a/src/stylesheets/resumen-container.scss
+++ b/src/stylesheets/resumen-container.scss
@@ -120,6 +120,7 @@ $avatar-border-radius: 50%;
       justify-content: space-between; /* Space between the sections */
       margin-top: 20px; /* Space above the alternative view */
       max-height: 90%;
+      min-height: 90%;
       flex-direction: row;
       width: 95%;
     }
@@ -129,7 +130,10 @@ $avatar-border-radius: 50%;
       flex-direction: column;
       justify-content: space-between;
       width: 50%;
-      height: 100%;
+      max-height: 20vh;
+      height: 20vh;
+      font-size: 1.5vh;
+      min-height: 100%;
     }
 
     .estado,
@@ -142,9 +146,10 @@ $avatar-border-radius: 50%;
       margin-top: 25px;
       max-height: 100%;
       height: 100%;
+      overflow-y: auto;
+
     }
     .bitacora {
-      overflow-y: auto;
       word-wrap: break-word;
       width: 50%;
       margin-left: 5%;
